--- a/queries/testing/ucsc/ucsc_illumina_testing.Rmd
+++ b/queries/testing/ucsc/ucsc_illumina_testing.Rmd
@@ -24,37 +24,33 @@ The following query was run to count rows returned on the illumina_test and publ
 
 ```sql 
 SELECT COUNT(*)
-FROM p7dev.illumina_test as vcf, public_hg19.ucsc as ucsc
-WHERE vcf.filter = "PASS"  
-AND vcf.chromosome = SUBSTR(ucsc.chrom,4) 
-AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend  
+FROM p7dev.illumina_test as ill, public_hg19.ucsc as ucsc
+WHERE ill.filter = "PASS"  
+AND ill.chromosome = SUBSTR(ucsc.chrom,4) 
+AND ill.position BETWEEN ucsc.txstart AND ucsc.txend  
 ```
 115,769 rows were returned. 
 
 ###Downloading variants into R
-The following query was run to return results to download for later comparison with R results. Substring was used to account for different format in chromosome name (and this was added to the Needs_Fixed tab of the vcf_info spreadshet.)
+The following query was run to return results to download for later comparison with R results. Substring was used to account for different format in chromosome name (and this was added to the Needs_Fixed tab of the ill_info spreadshet.)
 
 ```sql
-SELECT vcf.sample_id as vcf_sample_id, vcf.chromosome as vcf_chrom, vcf.position as vcf_pos,vcf.ref as vcf_ref, vcf.alt as vcf_alt, vcf.id as vcf_rsID, ucsc.name as ucsc_id, 
-SUBSTR(ucsc.chrom,4) as ucsc_chrom, ucsc.strand as ucsc_strand, ucsc.txstart as ucsc_txstart, 
-ucsc.txend as ucsc_txend,ucsc.cdsstart as ucsc_cdsstart, ucsc.cdsend as ucsc_cdsend, 
-ucsc.proteinid as ucsc_proteinid, ucsc.alignid as ucsc_alignid,
-CASE 
-WHEN vcf.position BETWEEN ucsc.cdsstart AND ucsc.cdsend 
-THEN 'CDS' 
-WHEN vcf.position BETWEEN ucsc.txstart AND ucsc.txend
-THEN 'transcript'
-             END AS ucsc_feature
-FROM p7dev.illumina_test as vcf, public_hg19.ucsc as ucsc
-WHERE vcf.filter = "PASS"  
-AND vcf.chromosome = SUBSTR(ucsc.chrom,4) 
-AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend  
+SELECT ill.sample_id as ill_sample_id, ill.chromosome as ill_chrom, 
+ill.position as ill_pos,ill.ref as ill_ref, ill.alt as ill_alt, ill.id as ill_rsID, 
+ucsc.name as ucsc_id, SUBSTR(ucsc.chrom,4) as ucsc_chrom, ucsc.strand as ucsc_strand, 
+ucsc.txstart as ucsc_txstart, ucsc.txend as ucsc_txend, ucsc.cdsstart as ucsc_cdsstart, 
+ucsc.cdsend as ucsc_cdsend, ucsc.exonstarts as ucsc_exonstart, ucsc.exonends as ucsc_exonend, 
+ucsc.proteinid as ucsc_proteinid, ucsc.alignid as ucsc_alignid
+FROM p7dev.illumina_test as ill, public_hg19.ucsc as ucsc
+WHERE ill.filter = "PASS"  
+AND ill.chromosome = SUBSTR(ucsc.chrom,4) 
+AND ill.position BETWEEN ucsc.txstart AND ucsc.txend  
 ```
 This file was then read into R to ensure validity of queries used for tesing: 
 
 ```{r read_results}
 #read in results table
-ucsc_results = read.csv("~/impala_scripts/queries/testing/ucsc/ucsc_query_result.csv", header=TRUE)
+ucsc_results = read.csv("./ucsc/ucsc_query_result.csv", header=TRUE)
 head(ucsc_results)
 dim(ucsc_results)
 ```
@@ -68,9 +64,9 @@ suppressMessages(library(RODBC))
 #connect using the DSN name you created on your machine
 conn <- odbcConnect("Impala DSN")
 
-vcf = sqlFetch(conn, "p7dev.illumina_test")
-head(vcf)
-dim(vcf)
+ill = sqlFetch(conn, "p7dev.illumina_test")
+head(ill)
+dim(ill)
 ucsc = sqlFetch(conn, "public_hg19.ucsc")
 head(ucsc)
 dim(ucsc)
@@ -80,18 +76,27 @@ The following was run in R:
 ```{r count_features_R}
 suppressMessages(library(GenomicRanges))
 suppressMessages(library(IRanges))
+suppressMessages(library(TxDb.Hsapiens.UCSC.hg19.knownGene))
 
-##subset for only vcf rows that passed filtering
-vcf_pass = vcf[which(vcf$filter == "PASS"),]
+
+##subset for only ill rows that passed filtering
+ill_pass = ill[which(ill$filter == "PASS"),]
         
 #create GRanges objects for comparison
-vars = with(vcf_pass, GRanges(seqnames=vcf_pass$chromosome, 
-                         ranges=IRanges(vcf_pass$pos, width=1, 
-                                        names=paste(vcf_pass$sample_id, ":",vcf_pass$ref, ">", vcf_pass$alt, sep="")),rsID=vcf_pass$id, filter=vcf_pass$filter, qual=vcf_pass$qual, sample_id=vcf_pass$sample_id))
+vars = with(ill_pass, GRanges(seqnames=ill_pass$chromosome, 
+                         ranges=IRanges(ill_pass$pos, width=1, 
+                                        names=paste(ill_pass$sample_id, ":",ill_pass$ref, ">", ill_pass$alt, sep="")),rsID=ill_pass$id, filter=ill_pass$filter, qual=ill_pass$qual, sample_id=ill_pass$sample_id))
 
 genes = with(ucsc, GRanges(seqnames=as.character(gsub("chr", "", ucsc$chrom)),
                          ranges=IRanges(ucsc$txstart, ucsc$txend,names=ucsc$name),
-                                        proteinid=ucsc$proteinid))
+                         txstart = ucsc$txstart,
+                         txend = ucsc$txend,
+                         cdsstart = ucsc$cdsstart,
+                         cdsend = ucsc$cdsend,
+                         exonstart = ucsc$exonstart,
+                         exonend = ucsc$exonend,
+                         proteinid = ucsc$proteinid
+                         ))
 
 ##find variants that fall in gene regions
 match = suppressWarnings(findOverlaps(vars, genes))
@@ -103,7 +108,13 @@ match.df = data.frame(sample_id = as.character(mcols(vars)$sample_id)[queryHits(
                       variant = as.character(lapply(strsplit(as.character(names(vars)[queryHits(match)]), ":"), function(x) x[2])),
                       rsId = as.character(mcols(vars)$rsID)[queryHits(match)],
                       gene_name = as.character(names(genes))[subjectHits(match)],
-                      protein_id = mcols(genes)$proteinid[subjectHits(match)],
+                      txstart = mcols(genes)$txstart[subjectHits(match)],
+                      txend = mcols(genes)$txend[subjectHits(match)],
+                      cdsstart = mcols(genes)$cdsstart[subjectHits(match)],
+                      cdsend = mcols(genes)$cdsend[subjectHits(match)],
+                      exonstart = as.character(mcols(genes)$exonstart[subjectHits(match)]),
+                      exonend = as.character(mcols(genes)$exonend[subjectHits(match)]),
+                      proteinid = mcols(genes)$proteinid[subjectHits(match)],
                       stringsAsFactors=F)
 dim(match.df)
 #115769 rows, same as impala query                                  
@@ -113,9 +124,9 @@ head(match.df)
 ###compare Impala Results file and R generated results
 ```{r compare_results}
 #add variant column to impala results
-ucsc_results$variant = paste(ucsc_results$vcf_ref, ">", ucsc_results$vcf_alt, sep="")
+ucsc_results$variant = paste(ucsc_results$ill_ref, ">", ucsc_results$ill_alt, sep="")
 #coerce to same structure as match.df for comparison
-ucsc.df = ucsc_results[c(1,2,3,16,6,7,14)]
+ucsc.df = ucsc_results[c(1,2,3,19, 6,7,10:16)]
 colnames(ucsc.df) = colnames(match.df)
 
 #order both data frames for matching
@@ -146,10 +157,10 @@ Imapala:
 This following query was run on impala, 776 unique protein id's returned: 
 ```sql
 SELECT COUNT(DISTINCT(ucsc.proteinid))
-FROM p7dev.illumina_test as vcf, public_hg19.ucsc as ucsc
-WHERE vcf.filter = "PASS"  
-AND vcf.chromosome = SUBSTR(ucsc.chrom,4) 
-AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend  
+FROM p7dev.illumina_test as ill, public_hg19.ucsc as ucsc
+WHERE ill.filter = "PASS"  
+AND ill.chromosome = SUBSTR(ucsc.chrom,4) 
+AND ill.position BETWEEN ucsc.txstart AND ucsc.txend  
 ```
 
 R on impala results: 
@@ -163,7 +174,7 @@ str(ucsc_results$ucsc_proteinid)
 R results: 
 776 unique protein id's returned in results, as above. 
 ```{r count_R_features}
-length(unique(ucsc.df$protein_id))
+length(unique(ucsc.df$proteinid))
 
 ```
 
@@ -175,7 +186,7 @@ First, we'll grab a random sample of genes from R and examine them on each platf
 rand_genes = c("uc031qze.1","uc004dhp.3","uc003wvt.4","uc021ujc.2","uc003llx.3")
 ```
 
-How many rows are returned for these genes in R? 
+371rows are returned for these genes in R.  
 ```{r count_rand_genes}
 
 rand_match = match.df[(match.df$gene_name %in% rand_genes),]
@@ -184,7 +195,7 @@ head(rand_match)
 
 ```
 
-How many of these genes are in impala results? 
+371 identical genes are also returned from impala results. 
 
 ```{r count_rand_impala_results}
 
@@ -198,10 +209,10 @@ which(rand_match != match_imp_results, arr.ind=TRUE)
 371 identical results are returned on impala: 
 ```sql
 SELECT COUNT(*)
-FROM p7dev.illumina_test as vcf, public_hg19.ucsc as ucsc
-WHERE vcf.filter = "PASS"  
-AND vcf.chromosome = ucsc.chromosome  
-AND vcf.position BETWEEN ucsc.start AND ucsc.stop 
+FROM p7dev.illumina_test as ill, public_hg19.ucsc as ucsc
+WHERE ill.filter = "PASS"  
+AND ill.chromosome = SUBSTR(ucsc.chrom,4) 
+AND ill.position BETWEEN ucsc.start AND ucsc.stop 
 AND ucsc.name IN ("uc031qze.1","uc004dhp.3","uc003wvt.4","uc021ujc.2","uc003llx.3")
 ```
 
@@ -209,66 +220,81 @@ AND ucsc.name IN ("uc031qze.1","uc004dhp.3","uc003wvt.4","uc021ujc.2","uc003llx.
 The results of above analysis were used to validate the following query that can be used to determine what regions a variant falls in and for futher annotation in finding amino acid changes:  
 
 ```sql 
-SELECT vcf.sample_id as vcf_sample_id, vcf.chromosome as vcf_chrom, vcf.position as vcf_pos,vcf.ref as vcf_ref, vcf.alt as vcf_alt, 
-vcf.id as vcf_rsID, ucsc.name as ucsc_id, SUBSTR(ucsc.chrom,4) as ucsc_chrom, ucsc.strand as ucsc_strand, ucsc.txstart as ucsc_txstart, 
-ucsc.txend as ucsc_txend,ucsc.cdsstart as ucsc_cdsstart, ucsc.cdsend as ucsc_cdsend, ucsc.proteinid as ucsc_proteinid, ucsc.alignid as ucsc_alignid
-FROM p7dev.illumina_test as vcf, public_hg19.ucsc as ucsc
-WHERE vcf.filter = "PASS"  
-AND vcf.qual > 100
-AND vcf.chromosome = SUBSTR(ucsc.chrom,4) 
-AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend  
-```
-
-This is equivalent to: 
-
-```sql
-SELECT vcf.sample_id as vcf_sample_id, vcf.chromosome as vcf_chrom, vcf.position as vcf_pos,vcf.ref as vcf_ref, vcf.alt as vcf_alt, 
-vcf.id as vcf_rsID, ucsc.name as ucsc_id, SUBSTR(ucsc.chrom,4) as ucsc_chrom, ucsc.strand as ucsc_strand, ucsc.txstart as ucsc_txstart, 
-ucsc.txend as ucsc_txend,ucsc.cdsstart as ucsc_cdsstart, ucsc.cdsend as ucsc_cdsend, ucsc.proteinid as ucsc_proteinid, ucsc.alignid as ucsc_alignid
-FROM p7dev.illumina_test as vcf
-JOIN
-public_hg19.ucsc as ucsc
-ON vcf.chromosome = SUBSTR(ucsc.chrom,4)  
-WHERE vcf.filter = "PASS"
-AND vcf.qual > 100
-AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend 
+SELECT ill.sample_id as ill_sample_id, ill.chromosome as ill_chrom, 
+ill.position as ill_pos,ill.ref as ill_ref, ill.alt as ill_alt, ill.id as ill_rsID, 
+ucsc.name as ucsc_id, SUBSTR(ucsc.chrom,4) as ucsc_chrom, ucsc.strand as ucsc_strand, 
+ucsc.txstart as ucsc_txstart, ucsc.txend as ucsc_txend, ucsc.cdsstart as ucsc_cdsstart, 
+ucsc.cdsend as ucsc_cdsend, ucsc.exonstarts as ucsc_exonstart, ucsc.exonends as ucsc_exonend, 
+ucsc.proteinid as ucsc_proteinid, ucsc.alignid as ucsc_alignid,
+CASE 
+WHEN ill.position BETWEEN ucsc.cdsstart AND ucsc.cdsend 
+THEN 'CDS' 
+WHEN ill.position BETWEEN ucsc.txstart AND ucsc.txend
+THEN 'transcript'
+ELSE NULL
+             END AS ucsc_feature
+FROM p7dev.illumina_test as ill, public_hg19.ucsc as ucsc
+WHERE ill.filter = "PASS"  
+AND ill.chromosome = SUBSTR(ucsc.chrom,4) 
+AND ill.position BETWEEN ucsc.txstart AND ucsc.txend  
 ```
 
 ##Query to find variants not in ucsc annotated regions
 ###Impala Results
-Results of can be used to locate intergenic variants; downstream analysis can be used to find the two flanking genes, and distances between the variants and the flanking genes.
+Results can be used to locate intergenic variants; downstream analysis can be used to find the two flanking genes, and distances between the variants and the flanking genes.
 
 ```sql
-SELECT vcf.* 
+SELECT ill.* 
 FROM
-  p7dev.illumina_test as vcf
+  p7dev.illumina_test as ill
   LEFT JOIN public_hg19.ucsc as ucsc
-    ON vcf.chromosome = SUBSTR(ucsc.chrom,4) 
-    AND vcf.position BETWEEN ucsc.txstart AND ucsc.txend
+    ON ill.chromosome = SUBSTR(ucsc.chrom,4) 
+    AND ill.position BETWEEN ucsc.txstart AND ucsc.txend
 WHERE
-  vcf.filter = "PASS" 
-  AND vcf.qual > 100
+  ill.filter = "PASS" 
   AND ucsc.chrom IS NULL
 ```
-Random sample of rsID's included in this set are annoated in dbSNP as being located in unknown or intergenic regions. 
 
-###Comparison with R
-The results of this query were downloaded into R for analysis in R: 
-```{r load_intergenic_results}
-#read in results of intergenic query
-intergenics = read.csv("~/impala_scripts/queries/testing/ucsc/intergenic_query_result.csv", header=TRUE)
+This query returned 52,277 rows on impala. 
 
-#create big ugly unique id column for matching
-intergenics$id = paste(intergenics$sample_id, intergenics$chromosome, intergenics$position, intergenics$id, sep="_")
+###Examining random sample of intergenic variants
+A random sample of intergenic variants was compared with variants annotated in R using the bioconductor hg19 ensembl database: 
 
-#add big ugly id column to annotated gene results
-match.df$id = paste(match.df$sample_id, match.df$chrom, match.df$pos, match.df$rsId, sep="_")
+```{r load_intergenic}
+intergenic_csv = read.csv("./ucsc/intergenic_query_result.csv", header=TRUE)
+head(intergenic_csv)
+dim(intergenic_csv)
 
-#test if any match id's show up in the intergenic query
-intergenics[which(match.df$id %in% intergenics$id),]
+#pull random sample and assign to variable
+rand_ill_intergenic = intergenic_csv[sample(unique(c(intergenic_csv$sample_id)), 5),]
+rand_ill_intergenic
 
-##test if any annotated queries show up in the intergenic query
-match.df[which(intergenics$id %in% match.df$id),]
+suppressMessages(library(VariantAnnotation))
+suppressMessages(library(AnnotationHub))
+suppressMessages(library(TxDb.Hsapiens.UCSC.hg19.knownGene))
+
+#load referenece genome from ucsc knowngene db
+txdb_hg19 <- TxDb.Hsapiens.UCSC.hg19.knownGene
+
+
+#create granges object from random sample of intergenics
+not_genes = with(rand_ill_intergenic, GRanges(seqnames=chromosome, 
+                              ranges=IRanges(position, width=1, 
+                              names=paste(sample_id, ":",ref, ">", alt, sep="")),
+                              rsID = id,
+                              sample_id = sample_id))
+
+#chr names don't match
+head(seqlevels(txdb_hg19))
+seqlevels(not_genes)
+#matching chr names
+seqlevels(not_genes) <- paste0("chr", seqlevels(not_genes))
+not_genes
+
+#assign genome
+genome(not_genes) = "hg19"
+
+#confirm that random sample is intergenic
+locateVariants(not_genes, txdb_hg19, AllVariants())
 
 ```
-None of the intergenic hits show up in the annotated regions, and none of the annotated regions show up in the intergenic query. 
